--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Zamówienia na balony powietrzne na każdą okazję. Szeroki wybór kolorów i wzorów."
+    />
+    <meta
+      name="keywords"
+      content="balony powietrzne, zamówienia na balony, balony na imprezy, dekoracje z balonów"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -15,7 +19,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
